tests/should_fail/let_struct_on_tuple.nv
module fail
// Let destructure: struct on tuple value
struct Point { x: Int, y: Int }
let Point { x, y } = (1, 2)
